# amber-ant

backend/: .env.example  .gitignore  EXTERNAL_SERVICES_GUIDE.md  PERFORMANCE_MONITORING_GUIDE.md  SECURITY_AUDIT_REPORT.md  SECURITY_KEY_MANAGEMENT.md  SETUP_GUIDE.md  backend-prompt.md  dual-categorization-system.md  openapi-contract.json  pyproject.toml  requirements-services.txt
backend/memory/agents/: README.md
backend/scripts/: manage_services.py  validate_gitignore.py
backend/src/: config.py  database.py  exceptions.py  main.py  middleware.py
backend/src/accounts/: models.py  repository.py  router.py  schemas.py  service.py
backend/src/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/budgets/: models.py  repository.py  router.py  schemas.py  service.py
backend/src/families/: models.py  repository.py  router.py  schemas.py  service.py
backend/src/goals/: models.py  repository.py  router.py  schemas.py  service.py
backend/src/performance/: __init__.py  endpoints.py  metrics.py  middleware.py  monitoring.py  reports.py
backend/src/plaid/: models.py  router.py  schemas.py
backend/src/security/: __init__.py  headers.py  key_manager.py  monitoring.py  token_blacklist.py  validation.py
backend/src/services/: webhooks.py
backend/src/services/background/: __init__.py  celery_app.py  scheduler.py  tasks.py
backend/src/services/email/: client.py
backend/src/services/plaid/: __init__.py  client.py  webhooks.py
backend/src/services/redis/: __init__.py  cache.py  client.py  rate_limiter.py  session.py
backend/src/services/stripe/: __init__.py  client.py  payment.py  subscription.py  webhook.py
backend/src/shared/: repository.py  utils.py
backend/src/subscriptions/: models.py  repository.py  router.py  schemas.py  service.py
backend/src/tenant/: context.py  manager.py  models.py  resolver.py  schemas.py  service.py
backend/src/tithing/: models.py  repository.py  router.py  schemas.py  service.py
backend/src/transactions/: models.py  repository.py  router.py  schemas.py  service.py
backend/src/users/: models.py  repository.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_auth.py  test_database.py  test_external_services.py  test_main.py  test_multi_tenant.py  test_performance_metrics.py  test_performance_monitoring.py  test_security_monitoring.py  test_security_token_blacklist.py  test_security_validation.py
backend/tests/integration/: test_accounts_api.py  test_auth_api.py  test_budgets_api.py  test_external_services.py  test_families_api.py  test_goals_api.py  test_tithing_api.py  test_transactions_api.py  test_users_api.py
backend/tests/performance/: test_performance_benchmarks.py
backend/tests/security/: test_security_validation.py
backend/tests/unit/: test_accounts_service.py  test_auth_service.py  test_background_tasks.py  test_budgets_service.py  test_families_repository.py  test_families_service.py  test_goals_service.py  test_tithing_service.py  test_transactions_service.py  test_users_repository.py  test_users_service.py
contracts/: README.md  mock-data.json
documents/: 001_mvp-features.md  002_non-functional-requirements_mobile-first-design.md  003_functional-requirements.md  004_non-functional-requirements.md  005_requirements-traceability-matrix.md  006_application-pricing-plans.md  (+6 more)
(+99 files in other folders)
